feat(backend): add auth_handler login
